--- a/src/app/modules/pending-approval/containers/pending-approval/pending-approval.container.html
+++ b/src/app/modules/pending-approval/containers/pending-approval/pending-approval.container.html
@@ -10,55 +10,20 @@
 
             <div id="shipment-search">
 
-                No shipments found.
 
-                <p style="font-size: 12px">You can change the SKU to ship and the Facilicity by clicking on them
-                <form id="search-form" action="" method="GET">
-                    <div class="search-filter">
-                        <label>
-                            <input type="search" name="q" value="">
-                            <input id="q" value="" type="hidden">
-                            <button type="submit">Search</button>
-                        </label>
-                    </div>
-                </form>
-                <form>
-                    <div class="table_length" >
-                        <label>Show 
-                            <select id="rows-per-page" >
-                                <option value="50"  >50</option>
-                                <option value="100"  >100</option>
-                                <option value="250"  >250</option>
-                                <option value="500"  >500</option>
-                                <option value="1000"  >1000</option>
-                            </select> entries
-                        </label>
-                    </div>
-                    
-                    
-                    <ccsp-datatable></ccsp-datatable>
+                <pa-top-search-bar></pa-top-search-bar>
 
-
-                    <div class="table_info">
-                        <div class="num_rows" > Showing 1 to 1 of 1 entries</div>
-                        
-                    </div>
-                </form>
-                &nbsp;
-                <p style="font-size: 13px">&nbsp; &nbsp;<input type="checkbox" class="check_all" id="checkall"> <label for="checkall">Check All</label></p>
-                <a class="button-darkblue smaller" id="approve_selected">Approve Selected</a> &nbsp;
-                <a class="button-pink smaller" id="void_selected">Void Selected</a> &nbsp;
-                <a class="button-magenta smaller" id="approve_duplicated">Approve All Duplicated</a> &nbsp;
-                <a class="button-purple smaller" id="approve_pending_approval">Approve All Pendding Approval</a> &nbsp;
-                <a class="button-green smaller" id="approve_all">&nbsp; APPROVE ALL &nbsp;</a> &nbsp;
-                <a class="button-orange smaller" id="export_to_csv">&nbsp; Export CSV &nbsp;</a>
-                <a class="button-darkblue smaller" id="rerun_nonships">Re-Run Non-Ships</a> &nbsp;
-                
-                <p>&nbsp;</p>
+                <pa-top-rows-per-page></pa-top-rows-per-page> 
+        
+        
             </div><!-- shipment-list -->
+
+            <pa-datatable></pa-datatable>
 
         </div><!-- view-wrap -->
 
+
+        <pa-bottom-button-actions></pa-bottom-button-actions>
     </div><!-- flakes-content -->
 
 </div><!-- flakes-frame -->
