--- a/src/app/modules/pending-approval/components/pagination/pagination.component.html
+++ b/src/app/modules/pending-approval/components/pagination/pagination.component.html
@@ -1,6 +1,6 @@
 <div *ngIf="showPagination">
   
-  <nav  aria-label="Page navigation example">
+  <nav  aria-label="Page navigation example" class="d-flex flex-row-reverse">
     <pagination 
       [totalItems]="pagination.total_shipments"
       [maxSize]="paginationData.maxSize"
