--- a/src/app/modules/pending-approval/containers/pending-approval/pending-approval.container.html
+++ b/src/app/modules/pending-approval/containers/pending-approval/pending-approval.container.html
@@ -3,7 +3,7 @@
     <div class="flakes-content">
         <div class="view-wrap">
 
-            <div>
+            <div class="page-header">
                 <h3>Pending Approval and Duplicates</h3>
                 
             </div>
@@ -17,8 +17,10 @@
         
         
             </div><!-- shipment-list -->
-
-            <pa-datatable></pa-datatable>
+            <div class="content-panel">
+                <pa-datatable></pa-datatable>    
+            </div>
+        
 
             <pa-pagination></pa-pagination>
         </div><!-- view-wrap -->
