Add Top Rows Per Page implementation

--- a/src/app/modules/pending-approval/components/top-rows-per-page/top-rows-per-page.component.html
+++ b/src/app/modules/pending-approval/components/top-rows-per-page/top-rows-per-page.component.html
@@ -1,13 +1,10 @@
 <form>
     <div class="table_length" >
         <label>Show 
-            <select id="rows-per-page">
-                <option value="10">10</option>
-                <option value="50">50</option>
-                <option value="100">100</option>
-                <option value="250">250</option>
-                <option value="500">500</option>
-                <option value="1000">1000</option>
+            <select id="rows-per-page" (change)="changePagerNumber($event.target.value)"> 
+                <option *ngFor="let page of pagesNumber; let i = index" [value]="page"> 
+                    {{ (page) }}  
+                </option>
             </select> entries
         </label>
     </div>
